fix hidden overflow

--- a/todos/style.css
+++ b/todos/style.css
@@ -1,5 +1,4 @@
 html {
-  overflow: hidden;
   max-width: 800px;
   margin: auto;
 }
